exportation, importation, gestion pause